# pkg/cars/controller.go
@@ -1,0 +1,19 @@
+package cars
+
+import (
+	"github.com/gofiber/fiber/v2"
+	"gorm.io/gorm"
+)
+
+type handler struct {
+	DB *gorm.DB
+}
+
+func RegisterRoutes(app *fiber.App, db *gorm.DB) {
+	h := &handler{
+		DB: db,
+	}
+
+	routes := app.Group("/cars")
+	routes.Get("/", h.GetCars)
+}
